test/tests/node/scheduler/every_pipeline_invalid.txt
error: subpipeline must produce events
 --> tests/node/scheduler/every_pipeline_invalid.tql:7:12
  |
7 | every 10ms {
  |            ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ 
  |
